--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,26 @@
 {
-    "name" : "quiqqer/tags",
-    "type" : "quiqqer-module",
-    "description" : "Tags for QUIQQER.",
-    "version" : "dev-dev",
-    "license" : "GPL-2.0+",
-
-    "authors" : [{
-        "name": "Henning Leutz",
-        "email": "leutz@pcsg.de",
-        "homepage": "http://www.pcsg.de",
-        "role": "Developer"
-    }],
-
-    "support" : {
-        "email" : "support@pcsg.de"
-    },
-
-    "require": {
-        "quiqqer/quiqqer" : "*@dev"
-    },
-
-    "autoload": {
-        "psr-0" : {
-            "QUI" : "lib/"
-        }
+  "name": "quiqqer/tags",
+  "type": "quiqqer-module",
+  "description": "Tags for QUIQQER.",
+  "version": "dev-dev",
+  "license": "GPL-2.0+",
+  "authors": [
+    {
+      "name": "Henning Leutz",
+      "email": "leutz@pcsg.de",
+      "homepage": "http://www.pcsg.de",
+      "role": "Developer"
     }
+  ],
+  "support": {
+    "email": "support@pcsg.de"
+  },
+  "require": {
+    "quiqqer/quiqqer": "*@dev"
+  },
+  "autoload": {
+    "psr-4": {
+      "QUI\\Tags\\": "src/QUI/Tags"
+    }
+  }
 }
