--- a/package.xml
+++ b/package.xml
@@ -11,16 +11,16 @@
         <image src="URL_OPT_DIR/quiqqer/package-tags/bin/images/Logo.jpg"/>
 
         <support>
-            <email>support@pcsg.de</email>
-            <forum>https://community.quiqqer.com</forum>
-            <source>https://dev.quiqqer.com/quiqqer/package-tags</source>
-            <issues>https://dev.quiqqer.com/quiqqer/package-tags/issues</issues>
-            <wiki>https://dev.quiqqer.com/quiqqer/package-tags/wikis/home</wiki>
+            <email><![CDATA[support@pcsg.de]]></email>
+            <forum><![CDATA[https://community.quiqqer.com]]></forum>
+            <source><![CDATA[https://dev.quiqqer.com/quiqqer/package-tags]]></source>
+            <issues><![CDATA[https://dev.quiqqer.com/quiqqer/package-tags/issues]]></issues>
+            <wiki><![CDATA[https://dev.quiqqer.com/quiqqer/package-tags/wikis/home]]></wiki>
         </support>
 
         <copyright>
             <name><![CDATA[PCSG - Computer & Internet Service OHG]]></name>
-            <license></license>
+            <license><![CDATA[]]></license>
         </copyright>
     </package>
 </quiqqer>
