--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,13 @@
     {
       "name": "Henning Leutz",
       "email": "leutz@pcsg.de",
-      "homepage": "http://www.pcsg.de",
+      "homepage": "https://www.pcsg.de",
+      "role": "Developer"
+    },
+    {
+      "name": "Jan Wennrich",
+      "email": "info@pcsg.de",
+      "homepage": "https://www.pcsg.de",
       "role": "Developer"
     }
   ],
