--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "quiqqer/tags",
   "type": "quiqqer-module",
-  "description": "The tag package edtends QUIQQER by a tag management.",
+  "description": "Extends QUIQQER with a tag management system.",
   "version": "dev-dev",
   "license": "GPL-3.0+",
   "authors": [
