--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "quiqqer/tags",
   "type": "quiqqer-module",
   "description": "Extends QUIQQER with a tag management system.",
-  "version": "dev-master",
+  "version": "1.0.0",
   "license": "GPL-3.0+",
   "authors": [
     {
