--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "type": "quiqqer-module",
     "description": "Extends QUIQQER with a tag management system.",
     "license": "GPL-3.0+",
+    "version": "1.1.0",
     "authors": [
         {
             "name": "Henning Leutz",
