--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "quiqqer\/tags",
     "type": "quiqqer-module",
+    "version": "1.2.0",
     "description": "Extends QUIQQER with a tag management system.",
     "license": "GPL-3.0+",
     "authors": [
